@@ -1,16 +1,16 @@
 package org.opentripplanner;
 
+import static org.opentripplanner.graph_builder.DataImportIssueStore.noopIssueStore;
+
 import com.csvreader.CsvReader;
 import java.io.File;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 import javax.annotation.Nullable;
 import org.opentripplanner.datastore.api.CompositeDataSource;
-import org.opentripplanner.datastore.api.DataSource;
 import org.opentripplanner.datastore.api.FileType;
 import org.opentripplanner.datastore.file.ZipFileDataSource;
 import org.opentripplanner.ext.fares.impl.DefaultFareServiceFactory;
@@ -24,10 +24,8 @@ import org.opentripplanner.graph_builder.module.ned.ElevationModule;
 import org.opentripplanner.graph_builder.module.ned.GeotiffGridCoverageFactoryImpl;
 import org.opentripplanner.graph_builder.module.osm.DefaultWayPropertySetSource;
 import org.opentripplanner.graph_builder.module.osm.OpenStreetMapModule;
-import org.opentripplanner.graph_builder.services.GraphBuilderModule;
 import org.opentripplanner.model.calendar.ServiceDateInterval;
 import org.opentripplanner.netex.NetexBundle;
-import org.opentripplanner.netex.NetexModule;
 import org.opentripplanner.netex.configure.NetexConfig;
 import org.opentripplanner.openstreetmap.OpenStreetMapProvider;
 import org.opentripplanner.routing.core.TraverseMode;
@@ -130,35 +128,40 @@ public class ConstantsForTests {
   public static TestOtpModel buildNewPortlandGraph(boolean withElevation) {
     try {
       var deduplicator = new Deduplicator();
-      var stopModel = new StopModel();
-      var graph = new Graph(stopModel, deduplicator);
-      var transitModel = new TransitModel(stopModel, deduplicator);
+      var graph = new Graph(deduplicator);
+      var transitModel = new TransitModel(new StopModel(), deduplicator);
       // Add street data from OSM
       {
         File osmFile = new File(PORTLAND_CENTRAL_OSM);
         OpenStreetMapProvider osmProvider = new OpenStreetMapProvider(osmFile, false);
-        OpenStreetMapModule osmModule = new OpenStreetMapModule(osmProvider);
+        OpenStreetMapModule osmModule = new OpenStreetMapModule(
+          List.of(osmProvider),
+          Set.of(),
+          // Need to use a mutable set here, since it is used
+          graph,
+          transitModel.getTimeZone(),
+          noopIssueStore()
+        );
         osmModule.staticBikeParkAndRide = true;
         osmModule.staticParkAndRide = true;
         osmModule.skipVisibility = true;
         new DefaultWayPropertySetSource().populateProperties(osmModule.wayPropertySet);
-        osmModule.buildGraph(graph, transitModel, new HashMap<>());
+        osmModule.buildGraph();
       }
       // Add transit data from GTFS
       {
         addGtfsToGraph(graph, transitModel, PORTLAND_GTFS, new DefaultFareServiceFactory(), "prt");
       }
       // Link transit stops to streets
-      {
-        GraphBuilderModule streetTransitLinker = new StreetLinkerModule();
-        streetTransitLinker.buildGraph(graph, transitModel, new HashMap<>());
-      }
+      StreetLinkerModule.linkStreetsForTestOnly(graph, transitModel);
+
       // Add elevation data
       if (withElevation) {
         var elevationModule = new ElevationModule(
-          new GeotiffGridCoverageFactoryImpl(new File(PORTLAND_NED_WITH_NODATA))
+          new GeotiffGridCoverageFactoryImpl(new File(PORTLAND_NED_WITH_NODATA)),
+          graph
         );
-        elevationModule.buildGraph(graph, transitModel, new HashMap<>());
+        elevationModule.buildGraph();
       }
 
       graph.hasStreets = true;
@@ -166,7 +169,7 @@ public class ConstantsForTests {
       addPortlandVehicleRentals(graph);
 
       transitModel.index();
-      graph.index();
+      graph.index(transitModel.getStopModel());
 
       return new TestOtpModel(graph, transitModel);
     } catch (Exception e) {
@@ -178,15 +181,21 @@ public class ConstantsForTests {
     try {
       var deduplicator = new Deduplicator();
       var stopModel = new StopModel();
-      var graph = new Graph(stopModel, deduplicator);
+      var graph = new Graph(deduplicator);
       var transitModel = new TransitModel(stopModel, deduplicator);
       // Add street data from OSM
       File osmFile = new File(osmPath);
       OpenStreetMapProvider osmProvider = new OpenStreetMapProvider(osmFile, true);
-      OpenStreetMapModule osmModule = new OpenStreetMapModule(osmProvider);
+      OpenStreetMapModule osmModule = new OpenStreetMapModule(
+        List.of(osmProvider),
+        Set.of(),
+        graph,
+        transitModel.getTimeZone(),
+        noopIssueStore()
+      );
       osmModule.setDefaultWayPropertySetSource(new DefaultWayPropertySetSource());
       osmModule.skipVisibility = true;
-      osmModule.buildGraph(graph, transitModel, new HashMap<>());
+      osmModule.buildGraph();
       return new TestOtpModel(graph, transitModel);
     } catch (Exception e) {
       throw new RuntimeException(e);
@@ -205,8 +214,8 @@ public class ConstantsForTests {
     );
 
     // Link transit stops to streets
-    GraphBuilderModule streetTransitLinker = new StreetLinkerModule();
-    streetTransitLinker.buildGraph(otpModel.graph(), otpModel.transitModel(), new HashMap<>());
+    StreetLinkerModule.linkStreetsForTestOnly(otpModel.graph(), otpModel.transitModel());
+
     return otpModel;
   }
 
@@ -220,7 +229,7 @@ public class ConstantsForTests {
   ) {
     var deduplicator = new Deduplicator();
     var stopModel = new StopModel();
-    var graph = new Graph(stopModel, deduplicator);
+    var graph = new Graph(deduplicator);
     var transitModel = new TransitModel(stopModel, deduplicator);
     addGtfsToGraph(graph, transitModel, gtfsPath, fareServiceFactory, null);
     return new TestOtpModel(graph, transitModel);
@@ -230,30 +239,37 @@ public class ConstantsForTests {
     try {
       var deduplicator = new Deduplicator();
       var stopModel = new StopModel();
-      var graph = new Graph(stopModel, deduplicator);
+      var graph = new Graph(deduplicator);
       var transitModel = new TransitModel(stopModel, deduplicator);
       // Add street data from OSM
       {
         File osmFile = new File(OSLO_EAST_OSM);
 
         OpenStreetMapProvider osmProvider = new OpenStreetMapProvider(osmFile, false);
-        OpenStreetMapModule osmModule = new OpenStreetMapModule(osmProvider);
+        OpenStreetMapModule osmModule = new OpenStreetMapModule(
+          List.of(osmProvider),
+          Set.of(),
+          graph,
+          transitModel.getTimeZone(),
+          noopIssueStore()
+        );
         osmModule.skipVisibility = true;
-        osmModule.buildGraph(graph, transitModel, new HashMap<>());
+        osmModule.buildGraph();
       }
       // Add transit data from Netex
       {
-        BuildConfig buildParameters = createNetexBuilderParameters();
-        List<DataSource> dataSources = Collections.singletonList(NETEX_MINIMAL_DATA_SOURCE);
-        NetexModule module = NetexConfig.netexModule(buildParameters, dataSources);
-        module.buildGraph(graph, transitModel, null);
+        new NetexConfig(createNetexBuilderParameters())
+          .createNetexModule(
+            List.of(NETEX_MINIMAL_DATA_SOURCE),
+            transitModel,
+            graph,
+            noopIssueStore()
+          )
+          .buildGraph();
       }
       // Link transit stops to streets
-      {
-        GraphBuilderModule streetLinkerModule = new StreetLinkerModule();
+      StreetLinkerModule.linkStreetsForTestOnly(graph, transitModel);
 
-        streetLinkerModule.buildGraph(graph, transitModel, new HashMap<>());
-      }
       return new TestOtpModel(graph, transitModel);
     } catch (Exception e) {
       throw new RuntimeException(e);
@@ -292,6 +308,9 @@ public class ConstantsForTests {
 
     var module = new GtfsModule(
       List.of(bundle),
+      transitModel,
+      graph,
+      noopIssueStore(),
       ServiceDateInterval.unbounded(),
       fareServiceFactory,
       false,
@@ -299,10 +318,10 @@ public class ConstantsForTests {
       300
     );
 
-    module.buildGraph(graph, transitModel, new HashMap<>());
+    module.buildGraph();
 
     transitModel.index();
-    graph.index();
+    graph.index(transitModel.getStopModel());
   }
 
   private static void addPortlandVehicleRentals(Graph graph) {
